# dat3

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-static.sh  build.sh  ci.sh  deny.toml  test.sh
.cargo/: config.toml
.github/workflows/: build.yml
src/: common.rs  common_tests.rs  dat1.rs  dat2.rs  lzss.rs  main.rs
tests/: add_validation.sh  common.sh  duplicate_paths.sh  f1.sh  glob_handling.sh  non-ascii.sh  path_consistency.sh  response_file.sh  response_files.txt  rpu.md5  rpu.sh
