[package]
name = "fallout-dat3"
version = "0.5.0"
edition = "2021"
authors = ["BGforge"]
description = "Fallout 1 and 2 .dat management cli."
license = "GPL-3.0"

[[bin]]
name = "dat3"
path = "src/main.rs"

[dependencies]
# Error handling - makes error management much easier
anyhow = "1.0"

# Binary data handling
byteorder = "1.5"          # Read/write integers in different byte orders
deku = "0.19"              # Declarative binary parsing

# Command-line interface
clap = { version = "4.4", features = ["derive"] }

# Compression and performance
flate2 = "1.0"             # zlib compression for DAT2 format  
rayon = "1.8"              # Parallel processing for faster extraction

# Cross-platform path handling
glob = "0.3"               # Glob pattern matching for cross-platform support

# Optional: Use mimalloc on Linux for better performance
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
